--- a/Report/Texture_analysis.Rmd
+++ b/Report/Texture_analysis.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Lithic artifacts and texture analysis: a low magnification approach"
-author: "Guillermo Bustos-Pérez$^{1,2,3}$\nAndreu Ollé$^{2,3}$"
+author: "Guillermo Bustos-Pérez$^{1,2,3}"
 output: 
   bookdown::html_document2: 
     toc: true
@@ -36,39 +36,51 @@ $^3$Àrea de Prehistoria, Universitat Rovira i Virgili (URV), Avinguda de Catalu
    
 **Abstract**   
 
-Lithic artifacts are some of the most common and numerous remains from paleolithic archaeological sites. However, their deposition into the archaeological record can be the result of multiple episodes of discard which are    
+Lithic artifacts are some of the most common and numerous remains from paleolithic archaeological sites. However, their deposition into the archaeological record can be the result of multiple and distant episodes of discard which can undergo a series of post depositional alterations. Because the numerous amounts of lithic remains, a quick, flexible, and effective method for identifying degrees of alteration in the surface of lithic implements is highly desirable. This would favor the analysis of complete lithic assemblages, inferring their overall integrity, identify different episodes of alteration, and even identify post-depositional alterations of different nature (such as rounding, dragging or wind erosion). This study examines the use gray scale level images to obtain quantitative measures from the surface of flint artifacts and determine if they capture changes due to post-depositional alterations. An experimental collection of flints was subjected to sequential episodes of rounding in a tumbling machine. After each episode, photographs with a Dino-Lite Edge 3.0 AM73915MZT USB microscope were taken, allowing to obtain quantitative values of surface using gray scale level values. The surface quantitative values were employed as variables in machine learning models to determine degree of exposure time and the most important variables for discrimination. Results indicate that the extraction of metrics from gray scale level images successfully capture changes in the surface of flint artifacts caused by post-depositional alterations. Additional results provide insights into which areas to sample in search for post-depositional alterations, and underline the importance of particle size causing the damage.      
 
-Because the numerous amount of lithic remains, a quick, flexible, low cost and effective method for identifying degrees of alteration in the surface of lithic implements is highly desirable. This would favor the analysis of complete lithic assemblages, inferring their overall integrity, identify different episodes or clusters of alteration, and even identify post-depositional alterations of different nature (such as rounding, dragging or wind erosion).   
-
-An experimental collection of flints and quartzites were subjected to sequential episodes of rounding. After each episode, photographs with a Dino-Lite Edge 3.0 AM73915MZT USB microscope were taken, allowing to obtain quantitative values of surface texture. Following this, the quantitative data of surface texture was employed as variables in Machine Learning models to determine degree of rounding and the most important variables for discrimination.   
-Results show, that despite being a continuum,   
-
-**Key words**: experimental archaeology; postdepositional alterations
+**Key words**: lithic taphonomy; experimental archaeology; machine learning    
 
 \ 
 
 ## **1. Introduction**   
 \ 
-Lithic artifacts constitute one of the most common remains from paleolithic archaeological sites. When analyzing a lithic assemblages, a key factor to consider is determining the degree of post-depositional alterations undergone by the assemblage since this results in behavioral and eco-cultural inferences.
-\ 
-Methods for determining assemblage integrity usually focus on the assemblage as a hole. These methods often include spatial analysis of artifacts and analysis of fabrics to determine if water flow has resulted in a reorganization of the spatial distribution [@mcpherron_additional_2018; @mcpherron_artifact_2005; @lenoble_fabric_2004; @schick_modeling_1987; @petraglia_water_1994]. Also lithic size distribution analysis are realized to determine if postdepositonal processes have resulted in sorting of the materials [@bertran_particle_2012; @maillo_fernandez_proporciones_1998; @schick_modeling_1987]. Another option is to focus directly on individual lithic artifacts to determine the degree of alteration that they have undergone [@chu_micro-abrasion_2015; @levi_sala_use_1986]. Although being more time consuming, this type of analysis provides a higher resolution, allowing to establish a graduation in the degree of postdepositional alterations, to combine its data with spatial analysis, dissecting archaeological episodes, or to detect several episodes of recycling.    
-  
-Individually determining the degree of alteration undergone by a lithic artifact uses microscopic analysis to measure ridge width, visually analyze the surface to determine the existence and intensity of abrasion, and examine the edges to determine the presence of detachments coming from particle impact or dulling of the edges in more extreme cases [@bustos-perez_experimental_2019; @shackley_stream_1974; @chambers_like_2003]. Of these measures, ridge width is the most clearly quantifiable which can result in an greater weight on the analyst's decision. However, analysis from sequential experimentations shows that the longer the exposure time to sedimentary abrasion, greater the increase in the standard deviation of ridge width measurements [@bustos-perez_experimental_2019]. This introduces a degree of uncertainty when determining the degree of rounding undergone by a stone tool, since the ratio of increasing ridge width might be the result of general flake topography, ridge position among the flake, ridge angle, or general profile of the ridge.   
-  
-Adding to the variability in flake width (which comes from flake and ridge morphology), it is also necessary to consider the effects of fluvial sedimentary processes which commonly affect lithic artifacts. Fluvial sedimentary processes are characterized by particle transport and these processes are not homogeneous. Lithic artifacts can form part of these process as another particle or remain static and be affected by the particles forming part of them. Commonly, three modes of particle transport are described in fluvial sedimentary contexts: rolling, sliding and saltation [@alhusban_assessing_2021], although the last one is not a common form of alteration in the case of stone tools [@schick_stone_1986]. Additional to alterations coming from fluvial contexts, stone artifacts might also be affected by aeolian particle transport, usually resulting in wind erosion [@luedtke_archaeologists_1992, @stapert_natural_1976].  
-   
-Stone tools have an additional factor of variability added to the ones derived from particle transport and sedimentary contexts (fluvial or eolian). This additional factor comes from the degree of exposure and speed on which a stone tool enters the archaeological record [@petraglia_water_1994; @schick_stone_1986; @schiffer_archaeological_1972]. For example, it is expected that partially buried artifacts with water and sediment flowing above them will present modifications in the exposed surface, while edges and the burred surface will remain semi-intact [@petraglia_water_1994]. A different scenario happens when artifacts are transported by rolling in coarse sediments, resulting in abrasion of all surfaces, dulling of the edges, but at the same time, the impact from coarse particles might result in freshly detached surfaces and edges which undergo new modifications until the artifact enters the archaeological record [@sieveking_transport_1987; @petraglia_water_1994].   
- 
-Thus, obtaining quantitative data of surface modifications can complement values of ridge width, and help identify and interpret type of particle transport undergone by, or affecting a stone artifact. Ideally, quantitative values of surface abrasion would be extracted from each stone artifact, allowing to maximize information and interpretation of the formation process of an archaeological site. However, as previously mentioned, stone artifacts are some of the most common remains from Paleolithic archaeological sites. Thus, a versatile, fast an non-time consuming method is highly desirable since it would enable to analyze large quantities of lithic materials.   
+Lithic artifacts constitute one of the most common remains from paleolithic archaeological sites. When analyzing lithic assemblages, a key factor to consider is determining the degree of post-depositional alterations undergone by the assemblage, since eco-cultural inferences are drawn from them. Methods for determining assemblage integrity usually focus on the assemblage as a hole. These methods often include spatial analysis of artifacts and analysis of fabrics to determine if water flow has resulted in a reorganization of the spatial distribution and orientations [@lenoble_fabric_2004; @mcpherron_artifact_2005; @mcpherron_additional_2018; @petraglia_water_1994; @schick_experimentally-derived_1987]. Also, lithic size distribution analysis are realized to determine if post-depositional processes have resulted in sorting of the materials [@bertran_particle_2012; @maillo_fernandez_proporciones_1998]. Another option is to focus directly on individual lithic artifacts to determine the degree of alteration that they have undergone [@chu_micro-abrasion_2015; @levi_sala_use_1986]. Although being more time consuming, this type of analysis provides a higher resolution, allowing to establish a graduation in the degree of post-depositional alterations, combine individual data of stone tools with spatial analysis, possible dissection of archaeological episodes, or to detect several episodes of recycling. Individual determination of degree of alteration undergone by a lithic artifact uses microscopic analysis to measure ridge width, visually analyze the surface to determine the existence and intensity of abrasion, and examine the edges to determine the presence of detachments coming from particle impact or dulling of the edges in more extreme cases [@bustos-perez_experimental_2019; @chambers_like_2003; @shackley_stream_1974].   
 
-This research presents results from a sequential experimentation in which a set of experimentally knapped flakes have undergone rounding process in a tumbler. After each episode of rounding, the same areas are photographed, and quantitative measures of flake texture are employed to characterize the surface. Following the extraction of quantitative values, Machine Learning models are employed to determine the degree of separation between rounding times. Flake ridge width is also considered as an indicative measure of alteration undergone by flakes.   
+Post-depositional alterations can affect and interact with stone tools in two broad ways which will be recorded by the tool surface. First, the type of fluvial sedimentary processes which can affect lithic artifacts. Fluvial sedimentary processes are characterized by particle transport and these processes are not homogeneous. Lithic artifacts can form part of these process as another particle, or remain static and be affected by particles being transported. Commonly, three modes of particle transport are described in fluvial sedimentary contexts: rolling, sliding and saltation [@alhusban_assessing_2021], although the last one is not a common form of alteration in the case of stone tools [@petraglia_water_1994]. Additional to alterations coming from fluvial contexts, stone artifacts might also be affected by aeolian particle transport, usually resulting in wind abrasion [@stapert_natural_1976]. The second factor of variability affecting post-depositional alterations of stone tools is the degree of exposure and speed on which a stone tool enters the archaeological record [@petraglia_water_1994; @schick_experimentally-derived_1987; @schiffer_archaeological_1972]. For example, it is expected that partially buried artifacts with water and sediment flowing above them will present modifications in the exposed surface, while the edges and the burred surface will remain semi-intact [@petraglia_water_1994]. A different scenario happens when artifacts are transported by rolling in coarse sediments, resulting in abrasion of all surfaces, dulling of the edges, but at the same time, the impact from coarse particles might result in freshly detached surfaces and edges which undergo new modifications until the artifact enters the archaeological record [@petraglia_water_1994; @sieveking_transport_1987]. Finally, a same homogeneous lithic assemblage might be affected differentially by stream abrasion. This differential alteration is consequence of the complex structure of water streams, were the overall slope of the terrain, energy and charge of the flow, morphology of the channel (which also affects the lateral deposition of sediments) and several other factors result in complex and uneven structures [@rust_structure_1972; @jain_where_2008; @montgomery_channel-reach_1997].    
 
-## **2. Methods**   
+Thus, obtaining quantitative data of surface modifications can complement values of ridge width, and help identify and interpret type of particle transport undergone by, or affecting a stone artifact. Ideally, quantitative values of surface abrasion would be extracted from each stone artifact, allowing to maximize information and interpretation of the formation process of an archaeological site. However, as previously mentioned, stone artifacts are some of the most common remains from Paleolithic archaeological sites. Thus, a versatile, fast and light time-consuming method is highly desirable since it would enable to analyze large quantities of lithic materials.    
 
-### **2.1 Experimental sample**   
+Use-wear studies have shown surface quantification can discriminate worked materials and offer a high resolution analysis of the activities carried out [@stemp_quantification_2009; @ibanez_quantitative_2021; @ibanez_identifying_2019; @ibanez_cereal_2016; @bostrom_quantifying_2022; @pedergnana_polish_2020; @evans_laser_2008]. Previous approaches in the study of use-wear have used grayscale level values for surface analysis of different worked materials [@adan_spatial_2003; @barcelo_image_2001; @bietti_image_1996; @pijoan-lopez_variabilidad_2002; @vila_caracterizacion_1993; @grace_quantification_1985]. Gray scale level analysis offers a series of advantages such as being fast to perform, require low equipment investment and can be applied in the field. This research presents results from a sequential experimentation in which a set of experimentally knapped flakes have undergone rounding process in a tumbler. After each episode of rounding, the same areas are photographed, and quantitative measures of flake surface using grayscale level values are employed to characterize the surface. Following the extraction of quantitative values, machine learning models are employed to determine the degree of separation between rounding times and most important features.    
 
-Three blocks of flint representing three different types (F1, F2 and F3) and three blocks of quartzite also representing three different types (Q1, Q2 and Q3) were experimentally knapped. Flint type F1 is characterize by a heterogeneous grey color surface with intrusions of geodes. Types F2 and F3 present a much more homogeneous surface, with colors being blue/grey and reddish/ocher. The three types correspond to the South Madrid Miocene Flint (SMM; @bustillo_caracteristicas_2005; @bustillo_caracterizacion_2012) although their locations varied widely. Quartzite type Q1 was collected at the Jarama river (Madrid, Spain) and it is characterized by a semi-fine grained surface of light blue/grey color. Quartzites types Q2 and Q3 were also collected in fluvial deposits at Arlanzón (Burgos, Spain). Type Q2 is characterized by a grey matrix with reddish oxide bands. Type Q3 is characterized by a dark blue color and being much more fine grained than the two previous types, although some internal fissures show a minor presence of oxides. Three flakes of F1, F2, Q1 and Q2 were selected, while four flakes were selected for F3 and Q3. This makes for a total of ten flakes of flint and ten flakes of quartzite.      
-\ 
+## **2. Methods**    
+
+### **2.1 Experimental sample and setting**   
+
+Two blocks of flint representing two different types (Type I and Type II) were experimentally knapped. The two types correspond to the South Madrid Miocene Flint [@bustillo_caracterizacion_2012; @bustillo_caracteristicas_2005] although from two different locations. South Madrid Miocene flints were formed by the replacement of sedimentary rocks which had filled the original basin. This replacement of the sedimentary rocks is considered to have taken place under continental conditions such as alluvial plain deposits, shallow lacustrine waters, and marshes [@bustillo_caracterizacion_2012]. Macroscopic analysis of the flints shows that they present a fine opaque homogeneous surface, with colors being blue/grey and reddish/ocher. There is also a relative absence of opal, although geodes and pseudo-morphs can be observed. From these two blocks three flakes were selected from Type 1, and four flakes were selected from Type 2.     
+
+!["Experimental sample of flint flakes (photographs by M. D. Guillén)."](Figures/01-Presenting-materials.png)
+
+In order to simulate sedimentary abrasion, the flakes were introduced by pairs into a tumbler machine (KT-3010 SUPER-TUMBLER) along with a mix of sand and water (30/40% of water with a total weight of 5 kg). Sediment was obtained from the quaternary levels of the Madrid basin and it is composed of fine sands with silt and partial carbonation.    
+
+All flakes were submitted to three cumulative cycles of tumbling with times set to 1h, 5h and 10h. Prior to their introduction into the tumbling machine, 6 photographs (3 per each side) of the surface of each flake were taken in order to have references of texture metrics from flint flakes. Previous research [@chu_micro-abrasion_2015; @bustos-perez_experimental_2019] suggests that, for the development of post depositional alterations, a decrease in particle size increases the heterogeneity in the speed, intensity and location of their development. Thus, after the first cycle of rounding (1h), each flint flake was screened using the Dino-Lite Edge 3.0 AM73915MZT USB microscope in order to determine and photograph areas which had developed sedimentary abrasion. These areas were photographed in the subsequent rounding cycles, allowing to obtain sequential images and data of surface change for cumulative times of 1h, 5h and 10h. The dataset of images was supplemented by the inclusion of sample photographs of macroscopically recognizable geological neocortex of flints from the same formation, providing a total of 269 photographs.    
+
+```{r}
+
+```
+
+
+### **2.2 Cleaning protocol, image acquisition and processing**   
+
+
+
+
+
+
+
+
+
+
+
 
 ### **2.2 Image capturing workflow**   
 
